--- a/Colorful Perspective/Manual/Colorful Perspective Manual/HTML/Colorful Perspective.html
+++ b/Colorful Perspective/Manual/Colorful Perspective Manual/HTML/Colorful Perspective.html
@@ -29,7 +29,7 @@
             border: none;
             text-align: center;
         }
-        
+
         .buttons { text-align: center; }
 
         .dark thead td, thead td {
@@ -158,13 +158,13 @@
                         <u>Black → Red → Green → Blue → Cyan → Magenta → Yellow → White.</u>
                     </li>
                     <li>
-                        Toggle the RGB channel values of your current color using the colors from the table:
+                        Toggle the RGB channel values of your current color using the noted cell colors from the table:
                         <ul>
-                            <li>If the number of pressed squares is odd, invert the colors from the table, then toggle the channels.</li>
+                            <li>If the number of pressed squares is odd, invert the colors from the table before toggling the channels.</li>
                         </ul>
                     </li>
                     <li>
-                        Using the arrows, in reading order, from the table results into a sequence of directions leading to your next face:
+                        Using the arrows from the noted cells in the table, in the same order that you pressed the cubes in, results into a sequence of directions leading to your next face:
                         <ul>
                             <li>If number of pressed squares is even, inverse every arrows’ direction in the sequence.</li>
                         </ul>
