First running Beta
Got all done so this is the state of the current Steam version from 28.05.2025

--- a/Colorful Perspective/Manual/Colorful Perspective Manual/HTML/Colorful Perspective.html
+++ b/Colorful Perspective/Manual/Colorful Perspective Manual/HTML/Colorful Perspective.html
@@ -131,7 +131,7 @@
                     Otherwise, look at the last matching color on the left face instead. If no color matches, start on the front face.<sup>[1]</sup>
                 </p>
                 <h3>Arrow table</h3>
-                <table class="arrow", "rotate-table" id = "rotate-table">
+                <table class="arrow rotate-table" id="rotate-table">
                     <tr><td class="blue">&rarr;</td><td class="green">&uarr;</td><td class="yellow">&larr;</td><td class="white">&darr;</td></tr>
                     <tr><td class="red">&darr;</td><td class="cyan">&rarr;</td><td class="black">&uarr;</td><td class="magenta">&larr;</td></tr>
                     <tr><td class="magenta">&uarr;</td><td class="blue">&darr;</td><td class="red">&larr;</td><td class="white">&rarr;</td></tr>
